--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ dependencies = [
     "jupyterlab>=4.4.7",
     "slap2-py",
     "electro-py",
+    "tqdm>=4.67.1",
+    "rich>=14.1.0",
+    "ipympl>=0.9.7",
+    "ipywidgets>=8.1.7",
 ]
 
 [build-system]
