--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "rich>=14.1.0",
     "ipympl>=0.9.7",
     "ipywidgets>=8.1.7",
+    "streamlit>=1.50.0",
 ]
 
 [build-system]
