--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "ipympl>=0.9.7",
     "ipywidgets>=8.1.7",
     "streamlit>=1.50.0",
+    "pillow>=11.3.0",
+    "scikit-learn>=1.7.2",
 ]
 
 [build-system]
