--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ dependencies = [
     "streamlit>=1.50.0",
     "pillow>=11.3.0",
     "scikit-learn>=1.7.2",
+    "python-pptx>=1.0.2",
+    "scikit-image>=0.25.2",
+    "av>=16.0.1",
+    "pymatreader>=1.1.0",
+    "h5py>=3.14.0",
+    "hdf5storage>=0.2.2",
+    "mat73>=0.65",
 ]
 
 [build-system]
