--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,8 @@ dependencies = [
     "slap2-py",
     "electro-py",
     "tqdm>=4.67.1",
-    "rich>=14.1.0",
     "pillow>=11.3.0",
     "scikit-learn>=1.7.2",
-    "python-pptx>=1.0.2",
     "scikit-image>=0.25.2",
     "av>=16.0.1",
     "pymatreader>=1.1.0",
@@ -32,10 +30,6 @@ dependencies = [
 dev = [
     "ruff>=0.13.0",
     "ty>=0.0.8",
-    "ipykernel>=6.30.1",
-    "jupyterlab>=4.4.7",
-    "ipympl>=0.9.7",
-    "ipywidgets>=8.1.7",
 ]
 
 [build-system]
@@ -60,23 +54,41 @@ include = [
   "pyproject.toml",
 ]
 
-# -------------------------------- FORMATTING AND LINTING -------------------------------
-
-[tool.black]
-# Accept all Black defaults (88 col, etc.); line-length shown for clarity only.
-line-length = 88
-target-version = ["py312"]  # adjust to your project min version, e.g., "py310"
-
+# ------------------------------ RUFF (lint + format) ------------------------------
 [tool.ruff]
 line-length = 88
 target-version = "py312"
-unsafe-fixes = true
+
+# If you want Ruff to run both linting and formatting in "modern" mode:
+# (preview is optional; keep it off if you want fewer surprises)
 preview = true
 
 [tool.ruff.lint]
-# Sensible, low-noise rule set; add more later as you like.
-select = ["E", "F", "I", "B", "UP"]  # pycodestyle, pyflakes, isort, bugbear, pyupgrade
+select = ["E", "F", "I", "B", "UP"]
+# You can add more later (e.g. "N", "SIM", "C4", "RUF", etc.)
 
 [tool.ruff.lint.isort]
-# Let Ruff handle import ordering; set your package name(s) here:
-known-first-party = ["package_name"]
+known-first-party = ["wisco_slap"]
+
+[tool.ruff.format]
+# Ruff formatter is the Black replacement (no Black config needed).
+# Keep default behavior unless you have a reason to tweak.
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
+
+# ------------------------------ TY (type checker + LSP) ------------------------------
+[tool.ty]
+# You can keep this section minimal; ty will auto-discover a lot.
+# Add rules as you start enforcing things.
+
+[tool.ty.environment]
+python-version = "3.12"
+
+[tool.ty.src]
+# Optional: helpful to be explicit in src-layout repos.
+root = ["./src"]
+
+# Example: ignore (or warn/error) specific rules if needed:
+# [tool.ty.rules]
+# possibly-unresolved-reference = "warn"
